--- a/meta-agent-tools/metaagent-common-tools/build.gradle
+++ b/meta-agent-tools/metaagent-common-tools/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'org.metaagent.framework.tools'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
 
 repositories {
     mavenLocal()
@@ -11,16 +11,19 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation platform("org.junit:junit-bom:5.10.0")
+    testImplementation "org.junit.jupiter:junit-jupiter"
+    testImplementation "org.mockito:mockito-core:5.16.0"
 
     compileOnly "org.projectlombok:lombok:1.18.30"
     annotationProcessor "org.projectlombok:lombok:1.18.30"
 
-    implementation "com.google.guava:guava:30.1-jre"
-    implementation "commons-collections:commons-collections:4.4"
     implementation "org.metaagent.framework:meta-agent-core:1.0-SNAPSHOT"
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation "com.squareup.retrofit2:retrofit:2.11.0"
+    implementation "org.metaagent.thirdparty:metaagent-tavily-api:1.0.0"
+    implementation "org.metaagent.thirdparty:metaagent-searchapi-api:1.0.0"
+
 }
 
 test {
