--- a/meta-agent-tools/metaagent-common-tools/build.gradle
+++ b/meta-agent-tools/metaagent-common-tools/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group = 'org.metaagent.framework.tools'
@@ -8,6 +9,14 @@ version = '1.0.0'
 repositories {
     mavenLocal()
     mavenCentral()
+}
+
+publishing {
+    publications {
+        create("mavenJava", MavenPublication) {
+            from components.java
+        }
+    }
 }
 
 dependencies {
