--- a/meta-agent-agents/build.gradle
+++ b/meta-agent-agents/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'buildlogic.java-common-conventions'
 }
 
+group = 'org.metaagent.framework'
+version = '1.0.0-SNAPSHOT'
+
 sourceSets {
     main {
         resources {
@@ -20,10 +23,9 @@ dependencies {
     compileOnly libs.bundles.lombok
     annotationProcessor libs.bundles.lombok
 
-    implementation project(':meta-agent-agents')
+    implementation project(':meta-agent-core')
     implementation libs.bundles.utilies
     implementation libs.bundles.jackson
     implementation libs.bundles.log
-    implementation "org.metaagent.framework.tools:metaagent-common-tools:1.0.0"
 
 }
