--- a/meta-agent-agents/build.gradle
+++ b/meta-agent-agents/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'application'
+    id 'java-library'
     id 'buildlogic.java-common-conventions'
 }
 
@@ -23,7 +24,7 @@ dependencies {
     compileOnly libs.bundles.lombok
     annotationProcessor libs.bundles.lombok
 
-    implementation project(':meta-agent-core')
+    api project(':meta-agent-core')
     implementation libs.bundles.utilies
     implementation libs.bundles.jackson
     implementation libs.bundles.log
