--- a/meta-agent-tools/metaagent-search-tools/build.gradle
+++ b/meta-agent-tools/metaagent-search-tools/build.gradle
@@ -8,6 +8,9 @@ version = '1.0.0'
 
 repositories {
     mavenLocal()
+    maven {
+        url "https://maven.aliyun.com/repository/public"
+    }
     mavenCentral()
 }
 
@@ -30,6 +33,9 @@ dependencies {
     implementation "org.metaagent.framework:meta-agent-core:1.0.0-SNAPSHOT"
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
     implementation "com.squareup.retrofit2:retrofit:2.11.0"
+    implementation "org.metaagent.thirdparty:metaagent-tavily-api:1.0.0"
+    implementation "org.metaagent.thirdparty:metaagent-searchapi-api:1.0.0"
+    implementation "com.google.apis:google-api-services-customsearch:v1-rev86-1.25.0"
 
 
 }
