--- a/buildSrc/src/main/groovy/buildlogic.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/buildlogic.java-common-conventions.gradle
@@ -29,6 +29,7 @@ plugins {
 
 repositories {
     // Use Maven Central for resolving dependencies.
+    mavenLocal()
     maven {
         url "https://maven.aliyun.com/repository/public"
     }
