update mcp tool

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ guava = '33.2.1-jre'
 apacheCommon = '3.16.0'
 commonConfig = '2.11.0'
 collections = '3.2.2'
-mcp = '0.7.0'
+mcp = '0.10.0'
 reactorCore = '3.7.4'
 springAI = '1.0.0-M6'
 
@@ -35,6 +35,8 @@ log4j-api = { module = 'org.apache.logging.log4j:log4j-api', version.ref = 'apac
 slf4j-impl = { module = 'org.apache.logging.log4j:log4j-slf4j2-impl', version.ref = 'apacheLog4j' }
 log4j = { module = 'log4j:log4j', version.ref = 'log4j' }
 mcp-sdk = { module = 'io.modelcontextprotocol.sdk:mcp', version.ref = 'mcp' }
+mcp-spring-webflux = { module = 'io.modelcontextprotocol.sdk:mcp-spring-webflux', version.ref = 'mcp' }
+mcp-spring-webmvc = { module = 'io.modelcontextprotocol.sdk:mcp-spring-webmvc', version.ref = 'mcp' }
 reactor-core = { module = 'io.projectreactor:reactor-core', version.ref = 'reactorCore' }
 spring-ai-core = { module = 'org.springframework.ai:spring-ai-core', version.ref = 'springAI' }
 
@@ -45,6 +47,6 @@ jsonschema = ['jsonschema']
 lombok = ['lombok']
 utilies = ['commons-lang3', 'commons-config', 'collections4', 'guava']
 log = ['slf4j-api', 'log4j', 'log4j-core', 'log4j-api', 'slf4j-impl']
-mcp = ['mcp-sdk']
+mcp = ['mcp-sdk' , 'mcp-spring-webflux', 'mcp-spring-webmvc']
 reactor = ['reactor-core']
 springai = ['spring-ai-core']
