--- a/meta-agent-core/build.gradle
+++ b/meta-agent-core/build.gradle
@@ -63,5 +63,6 @@ dependencies {
     api libs.bundles.mcp
     api libs.bundles.reactor
     api libs.bundles.springai
+    api libs.bundles.jinjava
 
 }
