--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,11 +11,14 @@ log4j = '1.2.17'
 apacheLog4j = '2.24.3'
 guava = '33.2.1-jre'
 apacheCommon = '3.16.0'
+apacheCommonIO = '2.19.0'
+apacheCommonText = '1.13.1'
 commonConfig = '2.11.0'
 collections = '3.2.2'
 mcp = '0.10.0'
 reactorCore = '3.7.4'
 springAI = '1.0.0-M6'
+jinjava = '2.8.0'
 
 [libraries]
 junit = { module = 'junit:junit', version.ref = 'junit' }
@@ -26,6 +29,8 @@ jackson-annotations = { module = 'com.fasterxml.jackson.core:jackson-annotations
 jsonschema = { module = 'com.github.victools:jsonschema-generator', version = 'jsonschema' }
 lombok = { module = 'org.projectlombok:lombok', version.ref = 'lombok' }
 commons-lang3 = { module = 'org.apache.commons:commons-lang3', version.ref = 'apacheCommon' }
+commons-text = { module = 'org.apache.commons:commons-text', version.ref = 'apacheCommonText' }
+commons-io = { module = 'commons-io:commons-io', version.ref = 'apacheCommonIO' }
 commons-config = { module = 'org.apache.commons:commons-configuration2', version.ref = 'commonConfig' }
 collections4 = { module = 'commons-collections:commons-collections', version.ref = 'collections' }
 guava = { module = 'com.google.guava:guava', version.ref = 'guava' }
@@ -39,14 +44,18 @@ mcp-spring-webflux = { module = 'io.modelcontextprotocol.sdk:mcp-spring-webflux'
 mcp-spring-webmvc = { module = 'io.modelcontextprotocol.sdk:mcp-spring-webmvc', version.ref = 'mcp' }
 reactor-core = { module = 'io.projectreactor:reactor-core', version.ref = 'reactorCore' }
 spring-ai-core = { module = 'org.springframework.ai:spring-ai-core', version.ref = 'springAI' }
+jinjava = { module = 'com.hubspot.jinjava:jinjava', version.ref = 'jinjava' }
+picocli = { module = 'info.picocli:picocli', version = '4.7.6' }
 
 [bundles]
 unittest = ['junit', 'jmockit']
 jackson = ['jackson-annotations', 'jackson-core', 'jackson-databind']
 jsonschema = ['jsonschema']
 lombok = ['lombok']
-utilies = ['commons-lang3', 'commons-config', 'collections4', 'guava']
+utilies = ['commons-lang3', 'commons-config', 'commons-io', 'commons-text', 'collections4', 'guava']
 log = ['slf4j-api', 'log4j', 'log4j-core', 'log4j-api', 'slf4j-impl']
 mcp = ['mcp-sdk' , 'mcp-spring-webflux', 'mcp-spring-webmvc']
 reactor = ['reactor-core']
 springai = ['spring-ai-core']
+jinjava = ['jinjava']
+picocli = ['picocli']
