--- a/meta-agent-core/build.gradle
+++ b/meta-agent-core/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
     api libs.bundles.utilies
     api libs.bundles.jackson
+    api libs.bundles.jacksonYaml
     api libs.bundles.log
     api libs.bundles.mcp
     api libs.bundles.reactor
