--- a/meta-agent-tools/metaagent-search-tools/build.gradle
+++ b/meta-agent-tools/metaagent-search-tools/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation "org.metaagent.thirdparty:metaagent-bochaai-api:1.0.0"
     implementation "com.google.apis:google-api-services-customsearch:v1-rev86-1.25.0"
     implementation "io.github.furstenheim:copy_down:1.1"
+    implementation "com.microsoft.playwright:playwright:1.55.0"
 
 }
 
