--- a/meta-agent-tools/metaagent-common-tools/build.gradle
+++ b/meta-agent-tools/metaagent-common-tools/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation "org.metaagent.framework:meta-agent-core:1.0.0-SNAPSHOT"
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
     implementation "com.squareup.retrofit2:retrofit:2.11.0"
+    implementation("io.github.java-diff-utils:java-diff-utils:4.16")
 
 
 }
