--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ collections = '3.2.2'
 mockito = '5.16.0'
 mcp = '0.10.0'
 reactorCore = '3.7.4'
-springAI = '1.0.0-M6'
+springAI = '1.1.0-M2'
 jinjava = '2.8.0'
 okhttp = '4.12.0'
 
@@ -49,7 +49,7 @@ mcp-sdk = { module = 'io.modelcontextprotocol.sdk:mcp', version.ref = 'mcp' }
 mcp-spring-webflux = { module = 'io.modelcontextprotocol.sdk:mcp-spring-webflux', version.ref = 'mcp' }
 mcp-spring-webmvc = { module = 'io.modelcontextprotocol.sdk:mcp-spring-webmvc', version.ref = 'mcp' }
 reactor-core = { module = 'io.projectreactor:reactor-core', version.ref = 'reactorCore' }
-spring-ai-core = { module = 'org.springframework.ai:spring-ai-core', version.ref = 'springAI' }
+spring-ai-core = { module = 'org.springframework.ai:spring-ai-client-chat', version.ref = 'springAI' }
 jinjava = { module = 'com.hubspot.jinjava:jinjava', version.ref = 'jinjava' }
 okhttp = { module = 'com.squareup.okhttp3:okhttp', version.ref = 'okhttp' }
 picocli = { module = 'info.picocli:picocli', version = '4.7.6' }
