--- a/meta-agent/meta-agent-agents/build.gradle
+++ b/meta-agent/meta-agent-agents/build.gradle
@@ -1,11 +1,20 @@
 plugins {
     id 'application'
     id 'java-library'
+    id 'maven-publish'
     id 'buildlogic.java-common-conventions'
 }
 
 group = 'org.metaagent.framework'
 version = '1.0.0-SNAPSHOT'
+
+publishing {
+    publications {
+        create("mavenJava", MavenPublication) {
+            from components.java
+        }
+    }
+}
 
 sourceSets {
     main {
